--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- Main Content -->
     <div class="container">
         <div class="main-content">
-            <h2>About Us</h2>
+            <h2>About Me</h2>
             <p>This is a simple website created using HTML and CSS.</p>
             <button class="button">Learn More</button>
         </div>
