--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2023 My Website. All rights reserved.</p>
+        <p>&copy; 2025-17 February</p>
     </footer>
 </body>
 </html>
