--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
+      <nav>
+        <div class="logo"><h1 class="">JMR</h1></div>
+        <div class="menu">
+          <a href="#">Home</a>
+          <a href="#">gallery</a>
+          <a href="https://www.facebook.com/share/1HVQKtuZGi/">about</a>
+          <a href="#">contact</a>
+        </div>
+      </nav>
+      <main>
+        <section>
+          <h1>Welcome to my website</h1>
+          <h2>Softare development</h2>
+        </section>
+      </main>
+       
+    </header>
     <footer>
         <div class="footerContainer">
             <div class="socialIcons">
