--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="h">
+      <nav class="nav">
         <div class="logo"><h1 class="">JMR</h1></div>
         <div class="menu">
           <a href="#">Home</a>
@@ -25,9 +25,9 @@
         </div>
       </nav>
       <main>
-        <section>
+        <section class="sec">
           <h1>Welcome to my website</h1>
-          <h2>Softare development</h2>
+          <h2>Software development</h2>
         </section>
       </main>
        
